# kilnui

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.codex/skills/kilnui-clay-sdlgpu/: SKILL.md
assets/: README.md
cmake/: kilnui.pc.in  kilnuiConfig.cmake.in  ui_components.pc.in
demo/: CMakeLists.txt  button_demo.c  component_gallery.c  design_system_demo.c  font_demo.c  input_demo.c  main.c
shaders/: backdrop_blur.frag.glsl  border.frag.glsl  circle.frag.glsl  gradient.frag.glsl  image_rounded.frag.glsl  line.frag.glsl  line.vert.glsl  rect.frag.glsl  rect.vert.glsl  scroll_shadow.frag.glsl  shadow.frag.glsl  tex.frag.glsl  tex.vert.glsl
src/: clay_colors.h  clay_sdl3_gpu.c  clay_sdl3_gpu.h  glyph_cache.c  glyph_cache.h  glyph_cache_atlas.c  glyph_cache_atlas.h  kilnui.c  kilnui.h  kilnui_render.c
src/ui/: README.md  button.c  button.h  checkbox.c  checkbox.h  container.c  container.h  design_system.c  design_system.h  dropdown.c  dropdown.h  icons.h  input.c  input.h  label.c  label.h  progress.c  progress.h  radio.c  radio.h  slider.c  slider.h  theme.c  theme.h  tooltip.c  tooltip.h  typography.c  typography.h  ui.h  ui_internal.h
